--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
   "author": "Mahendra Chavda",
   "license": "MIT",
   "devDependencies": {
-    "fastify": "^5.5.0",
-    "typescript": "^5.9.2"
+    "fastify": "5.6.1",
+    "typescript": "5.9.3"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mahendra7041/fastify-inertia.git"
   },
   "peerDependencies": {
-    "vite": "^7.1.4"
+    "vite": "^7.1.3"
   },
   "dependencies": {
-    "@types/node": "^24.3.0",
-    "fastify-plugin": "^5.0.1",
-    "fp": "^0.1.0",
-    "node-inertiajs": "^1.1.0"
+    "@types/node": "24.9.1",
+    "fastify-plugin": "5.1.0",
+    "fp": "0.1.0",
+    "node-inertiajs": "1.1.2"
   }
 }
