--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alex-fastify-inertiajs",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A lightweight Fastify plugin for Inertia.js that lets you build modern single-page applications with server-side rendering.",
   "keywords": [
     "inertiajs",
@@ -26,9 +26,9 @@
   },
   "dependencies": {
     "@types/node": "^24.3.0",
+    "alex-node-inertiajs": "1.1.3",
     "fastify-plugin": "^5.0.1",
-    "fp": "^0.1.0",
-    "alex-node-inertiajs": "1.1.2"
+    "fp": "^0.1.0"
   },
   "devDependencies": {
     "fastify": "5.6.1",
